; ModuleID = '/home/carl/AnghaBench/ccv/bin/nnc/extr_cifar-10.c__block_layer_new.c'
source_filename = "/home/carl/AnghaBench/ccv/bin/nnc/extr_cifar-10.c__block_layer_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32, i32, i32)* @_block_layer_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @_block_layer_new(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %14 = call i32 (...) @ccv_cnnp_input()
  store i32 %14, i32* %9, align 4
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = call i32* @_building_block_new(i32 %15, i32 %16, i32 %17, i32 1)
  store i32* %18, i32** %10, align 8
  %19 = load i32*, i32** %10, align 8
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @MODEL_IO_LIST(i32 %20)
  %22 = call i32 @ccv_cnnp_model_apply(i32* %19, i32 %21)
  store i32 %22, i32* %11, align 4
  store i32 1, i32* %12, align 4
  br label %23

23:                                               ; preds = %34, %4
  %24 = load i32, i32* %12, align 4
  %25 = load i32, i32* %8, align 4
  %26 = icmp slt i32 %24, %25
  br i1 %26, label %27, label %37

27:                                               ; preds = %23
  %28 = load i32, i32* %5, align 4
  %29 = call i32* @_building_block_new(i32 %28, i32 1, i32 1, i32 0)
  store i32* %29, i32** %13, align 8
  %30 = load i32*, i32** %13, align 8
  %31 = load i32, i32* %11, align 4
  %32 = call i32 @MODEL_IO_LIST(i32 %31)
  %33 = call i32 @ccv_cnnp_model_apply(i32* %30, i32 %32)
  store i32 %33, i32* %11, align 4
  br label %34

34:                                               ; preds = %27
  %35 = load i32, i32* %12, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %12, align 4
  br label %23

37:                                               ; preds = %23
  %38 = load i32, i32* %9, align 4
  %39 = call i32 @MODEL_IO_LIST(i32 %38)
  %40 = load i32, i32* %11, align 4
  %41 = call i32 @MODEL_IO_LIST(i32 %40)
  %42 = call i32* @ccv_cnnp_model_new(i32 %39, i32 %41, i32 0)
  ret i32* %42
}

declare dso_local i32 @ccv_cnnp_input(...) #1

declare dso_local i32* @_building_block_new(i32, i32, i32, i32) #1

declare dso_local i32 @ccv_cnnp_model_apply(i32*, i32) #1

declare dso_local i32 @MODEL_IO_LIST(i32) #1

declare dso_local i32* @ccv_cnnp_model_new(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
